feat: Added export of types

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "streakoid",
+  "name": "streakr-sdk",
   "version": "1.0.1",
   "description": "Streakoid SDK",
   "main": "lib/index.js",
