--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,6 +12,5 @@
     "pretty": true,
     "removeComments": true
   },
-  "include": ["src", "tests"],
-  "exclude": ["node_modules", "coverage"]
+  "include": ["src"]
 }
