--- a/package.json
+++ b/package.json
@@ -25,16 +25,16 @@
     "pretty-quick": "^1.11.1",
     "ts-jest": "^24.0.2",
     "tslint": "^5.20.0",
-    "typescript": "^3.6.3"
+    "typescript": "^3.6.3",
+    "prettier": "^1.18.2",
+    "eslint": "^6.4.0",
+    "dotenv": "^8.1.0"
   },
   "dependencies": {
     "@types/dotenv": "^6.1.1",
     "@types/mongoose": "^5.5.17",
     "axios": "^0.19.0",
-    "dotenv": "^8.1.0",
-    "eslint": "^6.4.0",
-    "mongoose": "^5.7.0",
-    "prettier": "^1.18.2"
+    "mongoose": "^5.7.0"
   },
   "husky": {
     "hooks": {
