--- a/package.json
+++ b/package.json
@@ -1,45 +1,47 @@
 {
-  "name": "@streakoid/streakoid-sdk",
-  "version": "1.0.86",
-  "description": "Streakoid SDK",
-  "main": "lib/index.js",
-  "types": "lib",
-  "scripts": {
-    "build": "tsc -p .",
-    "unit-tests": "jest --config=./jest.unit.config.js",
-    "lint": "eslint",
-    "intergration-tests": "jest --config=./jest.intergration.config.js --runInBand --forceExit",
-    "test": "npm run unit-tests && npm run intergration-tests",
-    "prepare": "npm run build",
-    "preversion": "npm run lint",
-    "version": "git add -A src",
-    "postversion": "git push --no-verify && git push --no-verify --tags",
-    "update": "npm version patch && npm publish"
-  },
-  "author": "reecekidd",
-  "license": "ISC",
-  "devDependencies": {
-    "@types/jest": "^24.0.18",
-    "@types/dotenv": "^6.1.1",
-    "@types/mongoose": "^5.5.17",
-    "husky": "^3.0.5",
-    "jest": "^24.9.0",
-    "pretty-quick": "^1.11.1",
-    "ts-jest": "^24.0.2",
-    "tslint": "^5.20.0",
-    "typescript": "^3.6.3",
-    "prettier": "^1.18.2",
-    "eslint": "^6.4.0",
-    "dotenv": "^8.1.0"
-  },
-  "dependencies": {
-    "axios": "^0.19.0",
-    "mongoose": "^5.7.0"
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "npm run lint&& pretty-quick --staged --verbose",
-      "pre-push": "npm run test"
+    "name": "@streakoid/streakoid-sdk",
+    "version": "1.0.86",
+    "description": "Streakoid SDK",
+    "main": "lib/index.js",
+    "types": "lib",
+    "scripts": {
+        "build": "tsc -p .",
+        "unit-tests": "jest --config=./jest.unit.config.js",
+        "lint": "eslint",
+        "intergration-tests": "jest --config=./jest.intergration.config.js --runInBand --forceExit",
+        "test": "npm run unit-tests && npm run intergration-tests",
+        "prepare": "npm run build",
+        "preversion": "npm run lint",
+        "version": "git add -A src",
+        "postversion": "git push --no-verify && git push --no-verify --tags",
+        "update": "npm version patch && npm publish"
+    },
+    "author": "reecekidd",
+    "license": "ISC",
+    "devDependencies": {
+        "@types/dotenv": "^6.1.1",
+        "@types/jest": "^24.0.18",
+        "@types/mongoose": "^5.5.17",
+        "dotenv": "^8.1.0",
+        "eslint": "^6.5.1",
+        "husky": "^3.0.5",
+        "jest": "^24.9.0",
+        "prettier": "^1.18.2",
+        "pretty-quick": "^1.11.1",
+        "ts-jest": "^24.0.2",
+        "tslint": "^5.20.0",
+        "typescript": "^3.6.3"
+    },
+    "dependencies": {
+        "@typescript-eslint/eslint-plugin": "^2.3.2",
+        "@typescript-eslint/parser": "^2.3.2",
+        "axios": "^0.19.0",
+        "mongoose": "^5.7.0"
+    },
+    "husky": {
+        "hooks": {
+            "pre-commit": "npm run lint&& pretty-quick --staged --verbose",
+            "pre-push": "npm run test"
+        }
     }
-  }
 }
