--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "scripts": {
         "build": "tsc -p .",
         "unit-tests": "jest --config=./jest.unit.config.js",
-        "lint": "eslint **/*.ts --ignore-pattern node_modules/",
+        "lint": "eslint **/*.ts",
         "intergration-tests": "jest --config=./jest.intergration.config.js --runInBand --forceExit",
         "test": "npm run unit-tests && npm run intergration-tests",
         "prepare": "npm run build",
