feat: Updated intergration tests to use cognito JWT

--- a/.env
+++ b/.env
@@ -1,2 +1,5 @@
 NODE_ENV=TEST
 APPLICATION_URL=http://localhost:3001
+COGNITO_EMAIL=reece@streakoid.com
+COGNITO_USERNAME=test
+COGNITO_PASSWORD=Milkshake1
