--- a/package.json
+++ b/package.json
@@ -34,12 +34,15 @@
         "typescript": "^3.6.3"
     },
     "dependencies": {
+        "@types/node-fetch": "^2.5.2",
         "@typescript-eslint/eslint-plugin": "^2.3.2",
         "@typescript-eslint/parser": "^2.3.2",
+        "aws-amplify": "^1.2.2",
         "axios": "^0.19.0",
         "eslint-config-prettier": "^6.4.0",
         "eslint-plugin-prettier": "^3.1.1",
-        "mongoose": "^5.7.0"
+        "mongoose": "^5.7.0",
+        "node-fetch": "^2.6.0"
     },
     "husky": {
         "hooks": {
