chore: Partially updated intergration tests after major refactor

--- a/.env
+++ b/.env
@@ -1,5 +1,6 @@
-NODE_ENV=TEST
+NODE_ENV=test
 APPLICATION_URL=http://localhost:3001
+TEST_DATABASE_URI=mongodb+srv://reece:G3PUluuoctP4wBfJ@cluster0-kxrys.mongodb.net/TEST
 COGNITO_EMAIL=reece@streakoid.com
 COGNITO_USERNAME=test
 COGNITO_PASSWORD=Milkshake1
