--- a/package.json
+++ b/package.json
@@ -42,7 +42,8 @@
         "eslint-config-prettier": "^6.4.0",
         "eslint-plugin-prettier": "^3.1.1",
         "mongoose": "^5.7.5",
-        "node-fetch": "^2.6.0"
+        "node-fetch": "^2.6.0",
+        "react-stripe-checkout": "^2.6.3"
     },
     "husky": {
         "hooks": {
