--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
         "eslint-plugin-prettier": "^3.1.1",
         "mongoose": "^5.7.5",
         "node-fetch": "^2.6.0",
+        "react": "^16.10.2",
         "react-stripe-checkout": "^2.6.3"
     },
     "husky": {
