--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     },
     "dependencies": {
         "@types/node-fetch": "^2.5.2",
+        "@types/react": "^16.9.9",
         "@typescript-eslint/eslint-plugin": "^2.3.2",
         "@typescript-eslint/parser": "^2.3.2",
         "aws-amplify": "^1.2.2",
