--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
         "typescript": "^3.6.3"
     },
     "dependencies": {
+        "@types/form-data": "^2.5.0",
         "@types/node-fetch": "^2.5.2",
         "@types/react": "^16.9.9",
         "@typescript-eslint/eslint-plugin": "^2.3.2",
@@ -42,6 +43,7 @@
         "axios": "^0.19.0",
         "eslint-config-prettier": "^6.4.0",
         "eslint-plugin-prettier": "^3.1.1",
+        "form-data": "^2.5.1",
         "mongoose": "^5.7.5",
         "node-fetch": "^2.6.0",
         "react": "^16.10.2",
