--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 NODE_ENV=test
-APPLICATION_URL=http://localhost:3001
-TEST_DATABASE_URI=mongodb+srv://reece:G3PUluuoctP4wBfJ@cluster0-kxrys.mongodb.net/TEST
-COGNITO_EMAIL=reece@streakoid.com
+APPLICATION_URL=
+TEST_DATABASE_URI=
+COGNITO_EMAIL=
 COGNITO_USERNAME=test
 COGNITO_PASSWORD=Milkshake1
