--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
     },
     "dependencies": {
         "@fortawesome/fontawesome-common-types": "^0.2.25",
+        "@fortawesome/fontawesome-svg-core": "^1.2.25",
+        "@fortawesome/react-fontawesome": "^0.1.7",
         "@types/form-data": "^2.5.0",
         "@types/node-fetch": "^2.5.2",
         "@types/react": "^16.9.9",
