--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
         "preversion": "npm run lint",
         "version": "git add -A src",
         "postversion": "git push --no-verify && git push --no-verify --tags",
-        "update": "npm version patch && npm publish"
+        "update": "npm version patch && npm publish",
+        "streakoid": "rm -rf node_modules/@streakoid/ && npm i @streakoid/streakoid-models"
     },
     "author": "reecekidd",
     "license": "ISC",
@@ -33,8 +34,9 @@
         "typescript": "^3.6.3"
     },
     "dependencies": {
-        "@streakoid/streakoid-models": "^1.0.30",
+        "@streakoid/streakoid-models": "^1.0.32",
         "@types/form-data": "^2.5.0",
+        "@types/lodash": "^4.14.152",
         "@types/node-fetch": "^2.5.2",
         "@types/react": "^16.9.9",
         "@typescript-eslint/eslint-plugin": "^2.3.2",
@@ -44,6 +46,7 @@
         "dotenv": "^8.2.0",
         "eslint-config-prettier": "^6.4.0",
         "eslint-plugin-prettier": "^3.1.1",
+        "lodash": "^4.17.15",
         "mongoose": "^5.7.5",
         "node-fetch": "^2.6.0",
         "react": "^16.10.2",
