chore: Updated package.json to do a git push as part of npm update

--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
         "preversion": "npm run lint",
         "version": "git add -A src",
         "postversion": "git push --no-verify && git push --no-verify --tags",
-        "update": "npm version patch && npm publish",
+        "update": "git push && npm version patch && npm publish",
         "streakoid": "rm -rf node_modules/@streakoid/ && npm i @streakoid/streakoid-models"
     },
     "author": "reecekidd",
